fix titlebar center text on small screens

--- a/src/main/resources/scss/navigation/components/_title-bar.scss
+++ b/src/main/resources/scss/navigation/components/_title-bar.scss
@@ -99,15 +99,18 @@ nav.nav-bar {
 		}
 
 		&.middle {
+			-webkit-backface-visibility: hidden;
 			flex: 1 1 auto;
 			max-width: calc(100% - 6rem);
+			min-width: 6rem;
+			// width: 100%;
 			position: static;
-			-webkit-backface-visibility: hidden;
 			background: transparent;
 			height: 2.8125rem;
 			line-height: 2.8125rem;
 			color: $primary-grey;
 			text-align: center;
+			overflow: visible;
 
 			&.has-pager {
 				max-width: calc(100% - 16.1rem);
